Forzar despliegue de GitHub Pages

--- a/index.html
+++ b/index.html
@@ -590,5 +590,6 @@
             updateOrderSummary();
         });
     </script>
+    <!-- Pequeño cambio para forzar el despliegue de GitHub Pages -->
 </body>
 </html>
